--- a/ui/default/pretty.css
+++ b/ui/default/pretty.css
@@ -107,6 +107,10 @@ img.center {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 1em;
+}
+img.massive {
+    margin-top: 0;
 }
 .right {text-align: right ! important;}
 
